Updated text, meta and ad banners, fized some beta links to permenant.

--- a/community.html
+++ b/community.html
@@ -13,21 +13,24 @@
 		gtag('config', 'G-3KX9VK5CCH');
 	</script>
 
-	<!-- JSON -->
-	<script type="application/ld+json">
-	{
-	  "@context": "https://schema.org",
-	  "@type": "Organization",
-	  "name": "OFiDCrypt",
-	  "url": "https://www.ofidcrypt.com",
-	  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
-	  "sameAs": [
-	  "https://x.com/OFiDCrypt",
-	  "https://www.facebook.com/OFiDCrypt",
-	  "https://www.instagram.com/OFiDCrypt"
-	  ]
-	}
-	</script>
+		<!-- JSON -->
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Organization",
+			  "name": "OFiDCrypt",
+			  "url": "https://www.ofidcrypt.com",
+			  "logo": [
+				"https://www.ofidcrypt.com/assets/images/logo02.PNG",
+				"https://www.ofidcrypt.com/assets/images/bglogo01.webp"
+			  ],
+			  "sameAs": [
+				"https://x.com/OFiDCrypt",
+				"https://www.facebook.com/OFiDCrypt",
+				"https://www.instagram.com/OFiDCrypt"
+			  ]
+			}
+		</script>
 
 	<!-- Meta Description (for SEO) -->
 	<title>Our Community Connections | OFiDCrypt</title>
@@ -53,9 +56,12 @@
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-
+		
 	<!-- Specific PNG sizes for modern browsers -->
-	<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
+	<link rel="icon" type="image/png" sizes="1280x1280" href="/favicon.png">
+	
+	<!-- Default Apple-Touch-Icon sizes -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
 	<!-- Canonical Preferred URL -->
 	<link rel="canonical" href="https://www.ofidcrypt.com/community">
@@ -164,7 +170,8 @@
 				<!-- Ad Banner -->
 				<section id="kin-money" class="ad-banner">
 					<div style="text-align: center;">
-							<img src="/assets/images/kin-ad-banner.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
+						<a href="https://t.me/KinCryptoTelegram" style="border-bottom: none;">
+							<img src="/assets/images/kin-banner01.JPG" alt="Ad Banner" style="max-width: 100%; height: auto;">
 						</a>
 					</div>
 				</section>
@@ -182,9 +189,9 @@
 						<tbody>
 							<tr>
 								<td>Join on <b>Flipchat</b> <br />
-									Room <b>#32</b></td>
-								<td><a href="https://testflight.apple.com/join/3sDwKbjM">Get iOS (Beta)</a><br />
-									<a href="https://appdistribution.firebase.google.com/pub/i/9fb1e93e29952772">Get Android (Beta)</a>
+									Room <a href="https://app.flipchat.xyz/room/32"><b>#32</b></a></td>
+								<td><a href="https://apps.apple.com/ca/app/flipchat-messenger/id6738328834">Get for iOS</a><br />
+									<a href="https://play.google.com/store/apps/details?id=xyz.flipchat.app&pcampaignid=web_share">Get for Android</a>
 								</td>
 							</tr>
 							<tr>
@@ -192,11 +199,6 @@
 									<b>𝕏</b></td>
 								<td><a href="https://x.com/OFiDCrypt">@OFiDCrypt</a><br />
 								<a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
-							</tr>
-							<tr>
-								<td>Join on <br />
-									<b>Telegram</b></td>
-								<td><a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a></td>
 							</tr>
 						</tbody>
 					</table>
