--- a/index.html
+++ b/index.html
@@ -14,39 +14,43 @@
 		
 		<!-- JSON -->
 		<script type="application/ld+json">
-		{
-		  "@context": "https://schema.org",
-		  "@type": "Organization",
-		  "name": "OFiDCrypt",
-		  "url": "https://www.ofidcrypt.com",
-		  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
-		  "sameAs": [
-		  "https://x.com/OFiDCrypt",
-		  "https://www.facebook.com/OFiDCrypt",
-		  "https://www.instagram.com/OFiDCrypt"
-		  ]
-		}
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Organization",
+			  "name": "OFiDCrypt",
+			  "url": "https://www.ofidcrypt.com",
+			  "logo": [
+				"https://www.ofidcrypt.com/assets/images/logo02.PNG",
+				"https://www.ofidcrypt.com/assets/images/bglogo01.webp"
+			  ],
+			  "sameAs": [
+				"https://x.com/OFiDCrypt",
+				"https://www.facebook.com/OFiDCrypt",
+				"https://www.instagram.com/OFiDCrypt"
+			  ]
+			}
 		</script>
 
 		<!-- Meta Description (for SEO) -->
-		<title>Join the Crypto Community | OFiDCrypt</title>
+		<title>OFiDCrypt e𝕏P Web3™ | Community of New-Gen Apps & Day-to-Day Utility</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<meta name="description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
+		<meta name="robots" content="noimageindex">
+		<meta name="description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
 		<meta name="keywords" content="cryptocurrency, blockchain, digital assets, OFiDCrypt, crypto community">
 		<meta name="author" content="Tokin ⬢">
 	
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="Join the Crypto Community | OFiDCrypt">
-		<meta property="og:description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
+		<meta property="og:title" content="OFiDCrypt e𝕏P Web3™ | Community of New-Gen Apps & Day-to-Day Utility">
+		<meta property="og:description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta property="og:url" content="https://www.ofidcrypt.com">
 		<meta property="og:type" content="website">
 	
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="Join the Crypto Community | OFiDCrypt">
-		<meta name="twitter:description" content="Join us and we'll explore the world of digital assets together! Understand crypto made easy through simple apps, informative articles, and shared community experiences.">
+		<meta name="twitter:title" content="OFiDCrypt e𝕏P Web3™ | Community of New-Gen Apps & Day-to-Day Utility">
+		<meta name="twitter:description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
 		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta name="twitter:url" content="https://www.ofidcrypt.com">
 		
@@ -58,7 +62,10 @@
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		
 		<!-- Specific PNG sizes for modern browsers -->
-		<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
+		<link rel="icon" type="image/png" sizes="1280x1280" href="/favicon.png">
+	
+		<!-- Default Apple-Touch-Icon sizes -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
 		<!-- Canonical Preferred URL -->
 		<link rel="canonical" href="https://www.ofidcrypt.com">
