--- a/cashlinks.html
+++ b/cashlinks.html
@@ -14,18 +14,21 @@
 
 		<!-- JSON -->
 		<script type="application/ld+json">
-		{
-		  "@context": "https://schema.org",
-		  "@type": "Organization",
-		  "name": "OFiDCrypt",
-		  "url": "https://www.ofidcrypt.com",
-		  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
-		  "sameAs": [
-		  "https://x.com/OFiDCrypt",
-		  "https://www.facebook.com/OFiDCrypt",
-		  "https://www.instagram.com/OFiDCrypt"
-		  ]
-		}
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Organization",
+			  "name": "OFiDCrypt",
+			  "url": "https://www.ofidcrypt.com",
+			  "logo": [
+				"https://www.ofidcrypt.com/assets/images/logo02.PNG",
+				"https://www.ofidcrypt.com/assets/images/bglogo01.webp"
+			  ],
+			  "sameAs": [
+				"https://x.com/OFiDCrypt",
+				"https://www.facebook.com/OFiDCrypt",
+				"https://www.instagram.com/OFiDCrypt"
+			  ]
+			}
 		</script>
 
 		<!-- Meta Description (for SEO) -->
@@ -56,8 +59,8 @@
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		
-		<!-- Specific PNG sizes for modern browsers -->
-		<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
+	<!-- Specific PNG sizes for modern browsers -->
+	<link rel="icon" type="image/png" sizes="1280x1280" href="/favicon.png">
 
 		<!-- Canonical Preferred URL -->
 		<link rel="canonical" href="https://www.ofidcrypt.com/cashlinks">
