--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -15,21 +15,24 @@
 		gtag('config', 'G-3KX9VK5CCH');
 	</script>
 
-	<!-- JSON -->
-	<script type="application/ld+json">
-	{
-	  "@context": "https://schema.org",
-	  "@type": "Organization",
-	  "name": "OFiDCrypt",
-	  "url": "https://www.ofidcrypt.com",
-	  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
-	  "sameAs": [
-	  "https://x.com/OFiDCrypt",
-	  "https://www.facebook.com/OFiDCrypt",
-	  "https://www.instagram.com/OFiDCrypt"
-	  ]
-	}
-	</script>
+		<!-- JSON -->
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Organization",
+			  "name": "OFiDCrypt",
+			  "url": "https://www.ofidcrypt.com",
+			  "logo": [
+				"https://www.ofidcrypt.com/assets/images/logo02.PNG",
+				"https://www.ofidcrypt.com/assets/images/bglogo01.webp"
+			  ],
+			  "sameAs": [
+				"https://x.com/OFiDCrypt",
+				"https://www.facebook.com/OFiDCrypt",
+				"https://www.instagram.com/OFiDCrypt"
+			  ]
+			}
+		</script>
 
 	<!-- Meta Description (for SEO) -->
 	<title>Livestream Crypto Events | OFiDCrypt</title>
@@ -55,9 +58,12 @@
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="../favicon.ico">
-
+		
 	<!-- Specific PNG sizes for modern browsers -->
-	<link rel="icon" type="image/png" sizes="1600x1600" href="../favicon.png">
+	<link rel="icon" type="image/png" sizes="1280x1280" href="../favicon.png">
+	
+	<!-- Default Apple-Touch-Icon sizes -->
+	<link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
 
 	<!-- Canonical Preferred URL -->
 	<link rel="canonical" href="https://www.ofidcrypt.com/pages/livestream">
