--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
 		<title>OFiDCrypt e𝕏P Web3™ | Community of New-Gen Apps & Day-to-Day Utility</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<meta name="robots" content="noimageindex">
 		<meta name="description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
 		<meta name="keywords" content="cryptocurrency, blockchain, digital assets, OFiDCrypt, crypto community">
 		<meta name="author" content="Tokin ⬢">
 	
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="OFiDCrypt e𝕏P Web3™ | Community of New-Gen Apps & Day-to-Day Utility">
+		<meta property="og:title" content="OFiDCrypt e𝕏P Web3™ | Explore New-Gen Apps for Day-to-Day Utility">
 		<meta property="og:description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta property="og:url" content="https://www.ofidcrypt.com">
