Updated some text to hyperlinks and added targets to some pictures.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -159,13 +159,15 @@
 								</div>
 
 								<p class="align-center">
-									<b>Interact with creator services</b> and purchase content using Kin with just a tap. 
-									For instance, members are utilizing Code Wallet with the Pennypost platform to publish content, 
-									which is where you'll find 
-									<a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a>. 
-									Follow the link to see how it works for just $0.25 USD of Kin.</p>
-							</header>
-							</div>
+									<a href="https://www.ofidcrypt.ca/try-services-using-code-wallet-uztuawi">Interact with creator services</a>
+									and purchase content using Kin with just a tap.
+									For instance, members are utilizing Code Wallet with the Pennypost platform to publish content,
+									which is where you'll find
+									<a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a>.
+									Follow the link to see how it works for just $0.25 USD of Kin.
+								</p>
+								</header>
+								</div>
 						
 							<!-- Revert video placeholder to poster image after video ends -->
 							<script>
