--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</script>
 
 		<!-- Meta Description (for SEO) -->
-		<title>OFiDCrypt e𝕏P Web3™ | Explore New-Gen Apps for Day-to-Day Utility</title>
+		<title>OFiDCrypt | e𝕏P Web3™ New-Gen Wallets & Apps</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
@@ -40,7 +40,7 @@
 		<meta name="author" content="Tokin ⬢">
 	
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="OFiDCrypt e𝕏P Web3™ | Explore New-Gen Apps for Day-to-Day Utility">
+		<meta property="og:title" content="OFiDCrypt | e𝕏P Web3™ New-Gen Wallets & Apps">
 		<meta property="og:description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta property="og:url" content="https://www.ofidcrypt.com">
@@ -48,7 +48,7 @@
 	
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="OFiDCrypt e𝕏P Web3™ | Explore New-Gen Apps for Day-to-Day Utility">
+		<meta name="twitter:title" content="OFiDCrypt | e𝕏P Web3™ New-Gen Wallets & Apps">
 		<meta name="twitter:description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
 		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta name="twitter:url" content="https://www.ofidcrypt.com">
