Revert Default Video

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -148,10 +148,9 @@
 			<section class="livestream">
 				<div class="stream video main">
 					<blockquote class="twitter-tweet" data-media-max-width="1920">
-						<p lang="en" dir="ltr">**Test EMBED** <a href="https://t.co/oSZuvTEvbX">https://t.co/oSZuvTEvbX</a><br><br>Live
-							at 3:00 PM PST - Meet &amp; Intro! <a href="https://t.co/PYE7WoHCqm">https://t.co/PYE7WoHCqm</a></p>&mdash;
-						OFiDCrypt e𝕏P Web3™ (@OFiDCrypt) <a
-							href="https://twitter.com/OFiDCrypt/status/1884684517748641886?ref_src=twsrc%5Etfw">January 29, 2025</a>
+						<blockquote class="twitter-tweet video main"  data-media-max-width="1920">
+							<p lang="en" dir="ltr"><a href="https://t.co/x243uX0ZIV"></a></p>
+							<p><a href="https://twitter.com/OFiDCrypt/status/1857192873197715888?ref_src=twsrc%5Etfw"></a></p>
 					</blockquote>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
