--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -148,10 +148,11 @@
 			<section class="livestream">
 				<div class="stream video main">
 					<blockquote class="twitter-tweet" data-media-max-width="1920">
-						<blockquote class="twitter-tweet video main"  data-media-max-width="1920">
-							<p lang="en" dir="ltr"><a href="https://t.co/x243uX0ZIV"></a></p>
-							<p><a href="https://twitter.com/OFiDCrypt/status/1857192873197715888?ref_src=twsrc%5Etfw"></a></p>
+						<p lang="en" dir="ltr">Tunining in at 3 PM in Canada for the scoop! <a
+								href="https://t.co/qoo37QZZXt">https://t.co/qoo37QZZXt</a></p>&mdash; OFiDCrypt e𝕏P Web3™ (@OFiDCrypt) <a
+							href="https://twitter.com/OFiDCrypt/status/1884738784501047782?ref_src=twsrc%5Etfw">January 29, 2025</a>
 					</blockquote>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 	
