Updates to Kin Community articles page as new articles are not accessible. Updated Live Events pages with new brand info and streams.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -145,7 +145,7 @@
  			-->
 
 			<!-- X Publish Adaptation  -->
-			<section class="livestream">
+			<section class="livestream" id="latest-event">
 				<div class="stream video main">
 					<blockquote class="twitter-tweet" data-media-max-width="1920">
 						<p lang="en" dir="ltr">Tunining in at 3 PM in Canada for the scoop! <a
@@ -177,7 +177,7 @@
 						<header class="major">
 							<h1>𝕏 Livestream</h1>
 							<!-- Section Description -->
-							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1OdKrXNzEWqJX">This is a Demo Stream</a></p>
+							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ZkJzRZMWvNJv">Aired on 𝕏 Jan-29-2024, 3:00 PM PST</a></p>
 							<p class="align-center">
 								<b>First time visiting?</b> Jump to the 
 								<a href="#about-contests">About Live Events</a> 
@@ -206,19 +206,19 @@
 								</thead>
 							<tbody>
 								<tr id="table-next-event"> 
-									<td>ID: PDA-001 <br><b><a href="#next-featured-event">Perk Digital Art</a></b></td>
-									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Livestream Start: <br><a href="#">2024-TBA at 00:00</a></td>
+									<td>ID: EXP-001 <br><b><a href="#EXP-001">e𝕏PB Launch Event</a></b></td>
+									<td>Entries Open: <br><a href="#">2025-Jan-24 at 12:00 PM</a></td>
+									<td>Entires Close: <br><a href="#">2025-Jan-29 at 2:00 PM</a></td>
+									<td>Livestream Start: <br><a href="#latest-event">2025-Jan-29 at 3:00 PM</a></td>
 								</tr>
 								<tr>
-									<td>ID: PDA-002 <br><b>Perk Digital Art</b></td>
-									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Livestream Start: <br><a href="#">2024-TBA at 00:00</a></td>
+									<td>ID: PDA-001 <br><b>Perk Digital Art</b></td>
+									<td>Entries Open: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
+									<td>Entires Close: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
+									<td>Livestream Start: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
 								</tr>
 								<tr>
-									<td>ID: PDA-003 <br><b>Perk Digital Art</b></td>
+									<td>ID: 000-000 <br><b>To Be Scheduled</b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Livestream Start: <br><a href="#">2024-TBA at 00:00</a></td>
@@ -238,7 +238,36 @@
 					</header>
 				</section>
 				
-				<article class="post featured event-post" id="next-featured-event">
+				<article class="post featured event-post" id="EXP-001">
+					<header class="major">
+						<section id="posts-container">
+							<div id="index-posts">
+								<section class="posts">
+									<article>
+										<header class="large-href">
+											<span class="date">EXP-001 e𝕏P WEB3™</span>
+											<h1><a href="#table-next-event">e𝕏PB<br />
+													Bouncy Ball</a></h1>
+										</header>
+										<a href="#" class="image fit"><img src="../assets/images/expb-001.png" alt="Art Thumbnail"></a>
+										<p>Announced in late September, the event invites participants to purchase
+											featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
+											clicking the button below, make your purchase and receive a free entry for the live draw!
+											You can join the upcoming 𝕏 Livestream where the winners will be chosen. The event
+											promises increased winners with more purchases, prizes in $Kin Tips, minted NFTs, and charitable donations to Kin
+											Liquidity Pools. We focus on rewarding the art creators, winners, and donations in this order.</p>
+										
+											<ul class="actions special">
+												<li><a href="#latest-event" class="button">Watch Event</a></li>
+											</ul>
+									</article>
+								</section>
+							</div>
+						</section>
+					</header>
+				</article>
+
+				<article class="post featured event-post" id="PDA-001">
 					<header class="major">
 						<section id="posts-container">
 							<div id="index-posts">
