Minor fixes and linking (jump links #.

--- a/community.html
+++ b/community.html
@@ -262,7 +262,7 @@
 						<article>
 							<header>
 								<span class="date">Coming Soon</span>
-								<h2><a href="https://www.ofidcrypt.com/community#community-featured-image">e𝕏P WEB3™
+								<h2><a href="/index.html#pagination-controls-top">e𝕏P WEB3™
 										OFiDCrypt<br /> News & Articles</a></h2>
 							</header>
 							<a href="#"
