--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -211,13 +211,13 @@
 									<td>Entires Close: <br><a href="#">2025-Jan-29 at 2:00 PM</a></td>
 									<td>Livestream Start: <br><a href="#latest-event">2025-Jan-29 at 3:00 PM</a></td>
 								</tr>
-								<tr>
+								<tr id="table-event-2">
 									<td>ID: PDA-001 <br><b>Perk Digital Art</b></td>
 									<td>Entries Open: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
 									<td>Livestream Start: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
 								</tr>
-								<tr>
+								<tr id="table-event-3">
 									<td>ID: 000-000 <br><b>To Be Scheduled</b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
@@ -250,15 +250,12 @@
 													Bouncy Ball</a></h1>
 										</header>
 										<a href="#" class="image fit"><img src="../assets/images/expb-001.png" alt="Art Thumbnail"></a>
-										<p>Announced in late September, the event invites participants to purchase
-											featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
-											clicking the button below, make your purchase and receive a free entry for the live draw!
-											You can join the upcoming 𝕏 Livestream where the winners will be chosen. The event
-											promises increased winners with more purchases, prizes in $Kin Tips, minted NFTs, and charitable donations to Kin
-											Liquidity Pools. We focus on rewarding the art creators, winners, and donations in this order.</p>
+										<p>Join us to learn more about what we do! Explore Web3 apps for business and social utility, and get rewarded with e𝕏P
+											Web3™. Participate in our contests, and earn rewards by trying out Web3 products from leading partners. Don't miss
+											the physical distribution of e𝕏PB-themed OFiD Stress Balls—perfect for relieving stress, coming soon!</p>
 										
 											<ul class="actions special">
-												<li><a href="#latest-event" class="button">Watch Event</a></li>
+												<li><a href="livestream.html#latest-event" class="button">Watch Event</a></li>
 											</ul>
 									</article>
 								</section>
