Minor jump link adjustments.

--- a/community.html
+++ b/community.html
@@ -228,7 +228,7 @@
 				<header class="major">
 					<h2>Kin Update<br />
 						Archive</h2>
-					<p>Research a library of historic Kin news and developments, 
+					<p>Research a <a href="#pagination-controls-top">library of historic Kin news</a> and developments, 
 						written and published by the owner of the Kin Community Telegram.
 					</p>
 				</header>
@@ -265,9 +265,9 @@
 								<h2><a href="/index.html#pagination-controls-top">e𝕏P WEB3™
 										OFiDCrypt<br /> News & Articles</a></h2>
 							</header>
-							<a href="#"
+							<a href="/index.html#pagination-controls-top"
 								class="image fit"><img src="assets/images/pic02.jpg"
-									alt="Article Title: Kin Monthy Update Coming Soon" /></a>
+									alt="Article Title: News & Articles Coming Soon"></a>
 							<p><b>This article will be published on Pennypost.</b>
 								Purchases support the writer. Optionally, you can leave a tip at the end of Pennypost
 								articles to show gratitude to the contributor.
