--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -207,21 +207,21 @@
 							<tbody>
 								<tr id="table-next-event"> 
 									<td>ID: EXP-001 <br><b><a href="#EXP-001">e𝕏PB Launch Event</a></b></td>
-									<td>Entries Open: <br><a href="#">2025-Jan-24 at 12:00 PM</a></td>
-									<td>Entires Close: <br><a href="#">2025-Jan-29 at 2:00 PM</a></td>
+									<td>Entries Open: <br><a href="#EXP-001">2025-Jan-24 at 12:00 PM</a></td>
+									<td>Entires Close: <br><a href="#EXP-001">2025-Jan-29 at 2:00 PM</a></td>
 									<td>Livestream Start: <br><a href="#latest-event">2025-Jan-29 at 3:00 PM</a></td>
 								</tr>
 								<tr id="table-event-2">
-									<td>ID: PDA-001 <br><b>Perk Digital Art</b></td>
+									<td>ID: PDA-001 <br><b><a href="#PDA-001">Perk Digital Art</a></b></td>
 									<td>Entries Open: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
-									<td>Livestream Start: <br><a href="#PDA-001">2024-TBA at 00:00</a></td>
+									<td>Livestream Start: <br><a href="#latest-event">2024-TBA at 00:00</a></td>
 								</tr>
 								<tr id="table-event-3">
 									<td>ID: 000-000 <br><b>To Be Scheduled</b></td>
 									<td>Entries Open: <br><a href="#">2024-TBA at 00:00</a></td>
 									<td>Entires Close: <br><a href="#">2024-TBA at 00:00</a></td>
-									<td>Livestream Start: <br><a href="#">2024-TBA at 00:00</a></td>
+									<td>Livestream Start: <br><a href="#latest-event">2024-TBA at 00:00</a></td>
 								</tr>
 							</tbody>
 						</table>
