Updated Live Event page text and dates.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -177,7 +177,7 @@
 						<header class="major">
 							<h1>𝕏 Livestream</h1>
 							<!-- Section Description -->
-							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ZkJzRZMWvNJv">Aired on 𝕏 Jan-29-2024, 3:00 PM PST</a></p>
+							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ZkJzRZMWvNJv">Aired on 𝕏 Jan-29-2025, 3:00 PM PST</a></p>
 							<p class="align-center">
 								<b>First time visiting?</b> Jump to the 
 								<a href="#about-contests">About Live Events</a> 
@@ -231,10 +231,9 @@
 				<section class="event headings">
 					<header class="major">
 						<h2>Event Details</h2>
-						<p class="align-center">The highly anticipated Kin & Code Wallet Live Events, in collaboration with <a
-								href="https://perk.exchange">Perk.Exchange</a> and
-							OFiDCrypt, marks the thrilling
-							debut of the 'Digital Art' series!</p>
+						<p class="align-center">The highly anticipated Livestream Series, presenting news, updates, promotions, contests, and
+							more in collaboration with <a href="https://perk.exchange">Perk.Exchange</a> and featured partners, mark their
+							thrilling debut with the 'eXPB Launch Event'!</p>
 					</header>
 				</section>
 				
