Website refresh for eXBP as primary, to solidify focus shift from previous primary Kin & Code.

--- a/community.html
+++ b/community.html
@@ -103,7 +103,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
+				<li><a href="pages/vipwithcode.html">Code Lounge</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">Live Events</a></li>
 				<li><a href="pages/affiliate.html">Partners</a></li>
