--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 					</h1>
 				
 					<div class="images-with-plus">
-						<a href="/community.html" class="no-style-link">
-							<img src="/assets/images/logokin02.jpg" alt="Kin Logo & Link to Community">
+						<a href="/index.html#expb-get" class="no-style-link">
+							<img src="/assets/images/300x300-solana.png" alt="Solana Logo & Jump to eXBP">
 						</a>						
 						<span class="plus-sign">+</span>
-						<a href="/pages/vipwithcode.html" class="no-style-link">
-							<img src="/assets/images/logocode01.jpg" alt="Code Inc. Logo & Link to VIP">
+						<a href="https://phantom.com/download" class="no-style-link">
+							<img src="/assets/images/300x300-phantom.png" alt="Code Inc. Logo & Link to VIP">
 						</a>
 					</div>
 					<div>
@@ -140,7 +140,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
+							<li><a href="pages/vipwithcode.html">Code Lounge</a></li>
 							<li><a href="/community.html">Community</a></li>
 							<li><a href="pages/livestream.html">Live Events</a></li>
 							<li><a href="pages/affiliate.html">Partners</a></li>
@@ -197,48 +197,50 @@
 								<h2>Quick Start</h2>
 							</header>
 							<div class="quick-start-items">
-								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/code-promo01.png"
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/300x300-phantom.png"
 											alt="Wallet Icon"></span>
 									<div class="quick-start-content">
 										<h3 class="quick-start-title">Get your Wallet</h3>
-										<p class="align-center">A Partner App by Code Inc.</p> <button class="button"><a
-												href="https://getcode.com/#download-1">Download</a></button>
+										<p class="align-center">By Phantom Technologies, Inc · Buy · Swap</p> <button class="button"><a
+												href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
 								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/bg-articles-lowres-square.png"
 											alt="Learn Icon"></span>
 									<div class="quick-start-content">
 										<h3 class="quick-start-title">Learn about Crypto</h3>
-										<p class="align-center">By OFiDCrypt</p> <button class="button"><a
+										<p class="align-center">Fundamentals · Basics · Tips · Security</p> <button class="button"><a
 												href="/index.html#pagination-controls-top">Go to Articles</a></button>
 									</div>
 								</article>
-								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/logokin01.jpg"
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/x-livestream.png"
 											alt="Event Icon"></span>
 									<div class="quick-start-content">
-										<h3 class="quick-start-title">Join Live Events</h3>
-										<p class="align-center">Via Perk.Exchange</p> <button class="button"><a
+										<h3 class="quick-start-title">Watch Livestreams</h3>
+										<p class="align-center">News · Updates · Contests · Giveaways</p> <button class="button"><a
 												href="/pages/livestream.html#about-contests">Learn More</a></button>
 									</div>
 								</article>
 							</div>
 
 							<!-- Quick Start: Featured -->
-							<article class="quick-start-item quick-start-featured">
-								<span class="image left"><img src="/assets/images/cashlink-tile.png" alt="Featured Icon"></span>
+							<article class="quick-start-item quick-start-featured" id="expb-get">
+								<span class="image left"><img src="/assets/images/expb-002-1x1.jpg" alt="Featured Icon"></span>
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Claim Cash</h3>
-									<p class="align-center">Fill Your Wallet</p>
-									<button class="button"><a href="/cashlinks.html">Go to Cashlinks</a></button>
+									<h3 class="quick-start-title">Get e𝕏PB</h3>
+									<p class="align-center">Bouncy Balls on Solana</p>
+									<button class="button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
 								</div>
 							</article>
 						</section>
+
 							<header id="Guide">
 								<h2>Guide</h2>
 								<!-- Section Description -->
-								<p>Coming Soon</p>
-								<p class="align-center">🚧 <b>Under Construction</b> 🚧</p>
-							</header>
+								<p>For blog posts and articles about getting started with OFiDCrypt, visit our <a
+										href="https://ofidcrypt.ca/readme-welcome">Companion Site</a>, hosted by our site partner, HVR Social Browser.
+								</p>
+								</header>
 						</article>
 				
 				<!-- Main -->
