--- a/pages/about.html
+++ b/pages/about.html
@@ -104,7 +104,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="vipwithcode.html">VIP Lounge</a></li>
+							<li><a href="vipwithcode.html">Code Lounge</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">Live Events</a></li>
 							<li><a href="affiliate.html">Partners</a></li>
@@ -177,7 +177,7 @@
 									<p>Learn essential crypto fundamentals with our carefully curated <a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a>, designed to broaden your
 										understanding in a simple, clear, and concise way. Explore our site and community resources to learn more about Kin and discover how you can send,
 										earn, or spend crypto on a growing list of services integrated with Code Wallet. Learn more about Code Wallet and how it works with Kin in the
-										<a href="../pages/vipwithcode.html">VIP Lounge</a></p>
+										<a href="../pages/vipwithcode.html">Code Lounge</a></p>
 									<h2>Get Involved</h2>
 									<p>Join like-minded individuals within the <a href="../community.html#kin-money">Community</a> on Flipchat, Telegram and 𝕏. Participate in promotions and live
 										events with Kin and Code Wallet, creating shared experiences together.</p>
