--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -105,7 +105,7 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="vipwithcode.html">VIP Lounge</a></li>
+				<li><a href="vipwithcode.html">Code Lounge</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li class="active"><a href="livestream.html">Live Events</a></li>
 				<li><a href="affiliate.html">Partners</a></li>
@@ -233,7 +233,7 @@
 						<h2>Event Details</h2>
 						<p class="align-center">The highly anticipated Livestream Series, presenting news, updates, promotions, contests, and
 							more in collaboration with <a href="https://perk.exchange">Perk.Exchange</a> and featured partners, mark their
-							thrilling debut with the 'eXPB Launch Event'!</p>
+							thrilling debut with the e𝕏PB Launch Event!</p>
 					</header>
 				</section>
 				
