--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -34,7 +34,7 @@
 		</script>
 		
 		<!-- Meta Description (for SEO) -->
-		<title>VIP Lounge with Code Wallet | OFiDCrypt</title>
+		<title>Lounge with Code Wallet | OFiDCrypt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Explore a whole new level of access, interaction and crypto sharing between you, your friends and the internet. You can log in to this exclusive area with the Code Wallet App!">
@@ -104,7 +104,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li class="active"><a href="vipwithcode.html">VIP Lounge</a></li>
+							<li class="active"><a href="vipwithcode.html">Code Lounge</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">Live Events</a></li>
 							<li><a href="affiliate.html">Partners</a></li>
@@ -146,9 +146,8 @@
 								<span class="date">Exclusive Content</span>
 								<h1>Code Wallet<br />
 									Lounge</h1>
-								<p>The Lounge encourages new members to join our community and get started with the Code Wallet app. Gain access
-									to VIP features such as claimable cash links, live events and more. Explore by clicking the "Login
-									with Code" button at the <a href="#get-ahead-section">end of the page</a>
+								<p>The Lounge encourages members to try a new web3 experience through a community partner app by Code Inc. Gain access
+									to features such as claimable cash links, live events and more. Explore by clicking the "Go to Cashlinks" button at the <a href="#get-ahead-section">end of the page</a>
 								</p>
 							</header>
 						
@@ -197,15 +196,29 @@
 							<!-- Section Heading -->
 							<header id="get-ahead-section">
 								<h2 class="align-center">Start Exploring</h2>
-								<p class="align-center">Download the app today to unlock a whole new level of access, interaction and crypto sharing between you, your friends, and the internet. We will grow together.</p>
-								<p class="align-center">🚧 <b>Under Construction</b> 🚧</p>
+								<p class="align-center">Download the app today to unlock a whole new level of access, interaction and crypto sharing
+									between you, your friends, and the internet. We will grow together.</p>
 							</header>
 
+							<!-- Quick Start: Featured -->
+							<section class="quick-start-section">
+								<article class="quick-start-item quick-start-featured">
+									<span class="image left"><img src="/assets/images/cashlink-tile.png" alt="Featured Icon"></span>
+									<div class="quick-start-content">
+										<h3 class="quick-start-title">Claim Cash</h3>
+										<p class="align-center">Fill Your Wallet</p>
+										<button class="button"><a href="/cashlinks.html">Go to Cashlinks</a></button>
+									</div>
+								</article>
+							</section>
+
+							<!-- 
 							<div class="image button-image">
 								<a href="../cashlinks.html" target="_blank">
 									<img src="../assets/images/pic10.png" alt="Login Button Image for Code Wallet" />
 								</a>
 							</div>
+							-->
 							
 							<footer>
 							<p class="align-center"> Don't have the Code App yet?<br /> 
