--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -104,7 +104,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="vipwithcode.html">VIP Lounge</a></li>
+							<li><a href="vipwithcode.html">Code Lounge</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">Live Events</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
