Updated text for clarity. Updated context on community.html

--- a/community.html
+++ b/community.html
@@ -148,7 +148,7 @@
 					<span class="date">Learning Together</span>
 					<h1>Community<br />
 						Connections</h1>
-					<p>We work in and with the community, learning from each other and sharing experiences.</p>
+					<p>We support other communities, learning from each other and sharing experiences.</p>
 				</header>
 
 				<!-- Community Connections Section -->
@@ -170,7 +170,7 @@
 									other. It's designed to be user-friendly, making transactions as simple as sending a
 									message, but with the added security of blockchain technology. With Kin, you can pay
 									for services, tip content creators, or just transfer money to friends without any
-									middleman, embodying true decentralization.</p>
+									middleman. Kin was introduced in 2017 as an ICO (Initial Coin Offering) within Kik Messenger.</p>
 							</div>
 						</div>
 					</article>
@@ -206,8 +206,7 @@
 							<tr>
 								<td>Follow on <br />
 									<b>𝕏</b></td>
-								<td><a href="https://x.com/OFiDCrypt">@OFiDCrypt</a><br />
-								<a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
+								<td><a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -228,7 +227,7 @@
 				<header class="major">
 					<h2>Kin Update<br />
 						Archive</h2>
-					<p>Research a <a href="#pagination-controls-top">library of historic Kin news</a> and developments, 
+					<p>Research our <a href="#pagination-controls-top">library of Kin news</a> and developments, 
 						written and published by the owner of the Kin Community Telegram.
 					</p>
 				</header>
