Several changes to about and text on pages to unify goals and mission. Mission updated and socials added to about.

--- a/index.html
+++ b/index.html
@@ -181,11 +181,10 @@
 							<header class="major">
 								<span class="date">OFiDCrypt Services</span>
 								<h1>Our <br />Mission</h1>
-								<p>To simplify your entry into the crypto world with a single, user-friendly wallet and payment app
-									dedicated to one cryptocurrency and its community. From there, explore additional opportunities through
-									our growing
-									partnerships.</p>
-					
+								<p>Our mission is to unite, educate, and inspire as a leading brand and movement in the Web3 space. Through innovative
+									applications, wallets, and partnerships with top developers, we seamlessly introduce people to blockchain
+									technology. Join us in exploring new opportunities and shaping the future of digital experiences.</p>
+
 								<p><b>To jump straight in, we’ve provided quick links below</b>
 								
 									<p>We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana cryptocurrency,
@@ -197,14 +196,14 @@
 						<!-- Quick Start Section -->
 						<section class="quick-start-section">
 							<header>
-								<h2>Quick Start</h2>
+								<h2>Quick Start e𝕏P Web3™</h2>
 							</header>
 							<div class="quick-start-items">
 								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/300x300-phantom.png"
 											alt="Wallet Icon"></span>
 									<div class="quick-start-content">
 										<h3 class="quick-start-title">Get your Wallet</h3>
-										<p class="align-center">By Phantom Technologies, Inc · Buy · Swap</p> <button class="button"><a
+										<p class="align-center">By Phantom Technologies Inc · Buy · Swap</p> <button class="button"><a
 												href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
@@ -231,7 +230,8 @@
 								<span class="image left"><img src="/assets/images/expb-002-1x1.jpg" alt="Featured Icon"></span>
 								<div class="quick-start-content">
 									<h3 class="quick-start-title">Get e𝕏PB</h3>
-									<p class="align-center">Bouncy Balls on Solana</p>
+									<p class="align-center">Bouncy Balls · On Solana <br />
+										In Your Wallet</p>
 									<button class="button"><a href="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH">Go to Merchant</a></button>
 								</div>
 							</article>
@@ -427,7 +427,7 @@
 				<!-- Copyright -->
 				<div id="copyright">
 					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="/community.html">Community</a></li> <li><a href="/pages/livestream.html">Live Events</a></li> <li><a href="/pages/about.html">About</a></li></ul>
-					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
+					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 				</div>
 
