--- a/community.html
+++ b/community.html
@@ -439,7 +439,7 @@
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
-				<li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li>
+				<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
 			</ul>
 			<ul>
 				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
